Reposicionando a tag meta e resolvendo um problema no código

--- a/tutorial-001/index.html
+++ b/tutorial-001/index.html
@@ -3,15 +3,15 @@
 <html lang="en">
 
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial 001 - Clock</title>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Mallanna&display=swap">
   </head>
 
-  <body onload="clock()">
-    <div id=clock></div>
+  <body onload="clock();">
+    <div id="clock"></div>
     <script type="text/javascript" src="./script/main.js"></script>
   </body>
 
